# bmstu-cw-cg

./: .clang-format  .gitignore  CMakeLists-win.txt  CMakeLists.txt  README.md  main.cpp
GraphicsEngine/: Color.h  GraphicsEngine.cpp  GraphicsEngine.sln  GraphicsEngine.vcxproj  Material.h  Object.h  Ray.h  Renderer.cpp  Scene.h  Vector.cpp
assets/blender/: cornell-box.blend
c++/: Camera.h  Canvas.h  Color.h  GraphicsEngine.cpp  GraphicsEngine.vcxproj  GraphicsEngine.vcxproj.filters  Light.h  Material.h  Object.cpp  Object.h  Ray.h  Renderer.cpp  Renderer.h  Scene.h  Vec3.cpp  Vec3.h  Vector.h  imconfig.h  imgui.ini  math.cpp  math.h
dependencies/: CMakeLists.txt
dependencies/imgui-sfml/: CMakeLists.txt
dependencies/sfml/: CMakeLists.txt
docs/: TZ.md  TitlePage.docx  old_presentation.pptx  pres.pptx  presentation.md  presentation.pptx
docs/presentation/: main.tex
docs/rpz/: 01-definitions.tex  02-abbreviations.tex  03-introduction.tex  04-analysis.tex  05-design.tex  06-implementation.tex  07-research.tex  08-conclusion.tex  09-appendix.tex  README.md  biblio.bib  main.blg  main.tex
docs/rpz/bmstu/: bmstu-title.sty  bmstu.cls
docs/rpz/images/: .$IDEF0_RayTracing.drawio.bkp  .$IDEF0_specific.drawio.bkp  .$UML.drawio.bkp  .$trace_ray_diagram.drawio.bkp  IDEF0_RayTracing.drawio  IDEF0_general.drawio  IDEF0_specific.drawio  UML.drawio  image_generation_idef0.drawio  ray_tracing.drawio  trace_ray_diagram.drawio
docs/tz/: CG-CW-TZ.pages
glad/include/glad/: glad.h
glad/src/: glad.c
images/: sphere.ppm  teapot-pt.ppm  utah_teapot-res1.ppm  utah_teapot-res2.ppm  utah_teapot-res3.ppm  utah_teapot-res4.ppm
include/: AABB.h  AABB.hpp  AppContext.hpp  BVH.hpp  Benchmark.hpp  Camera.h  Camera.hpp  Canvas.h  Canvas.hpp  CanvasExporter.hpp  Color.hpp  Engine.hpp  GUI.hpp  Interval.h  Interval.hpp  Light.h  Light.hpp  LightTypes.hpp  Material.hpp  Math.hpp  MeshLight.hpp  ModelLoader.h  ModelLoader.hpp  Object.h  Object.hpp  ObjectTypes.hpp  PrimitiveTypes.hpp  Ray.h  Ray.hpp  Ray3.hpp  Renderer.h  Renderer.hpp  Scene.h  Scene.hpp  SceneCreator.hpp  Settings.hpp  Types.hpp  Vec.hpp  Vec3.h  Vec3.hpp  (+2 more)
python/: camera.py  light.py  main.py  ray.py  renderer.py  scene.py  test.py  vector.py
shaders/: screen.frag  screen.vert  tracer.frag  tracer.vert
src/: BVH.cpp  Benchmark.cpp  CMakeLists.txt  Canvas.cpp  Color.cpp  GLFW_Main.cpp  GUI.cpp  GraphicsEngine.cpp  Interval.cpp  Main.cpp  Math.cpp  Object.cpp  OldMain.cpp  Renderer.cpp  Vec3.cpp  camera.py  canvas.py  color.py  image_saver.py  imgui.ini  main.py  object.py  renderer.py  scene.py
